# Wall-e-simulation-ros2

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  package.xml
Wall-E-Bot/: Real Bo Motor With Wheel.STEP  WallE--leg.SLDPRT  WallE-chassis.SLDPRT  WallE-pcb.SLDPRT  WalllE-Final.SLDASM
Wall-E-Bot/Wall-E-urdf1/: CMakeLists.txt  package.xml
Wall-E-Bot/Wall-E-urdf1/launch/: display.launch  gazebo.launch
Wall-E-Bot/Wall-E-urdf1/urdf/: Wall-E-urdf1.csv  Wall-E-urdf1.urdf
config/: joint_names.yaml  joint_names_Wall-E-urdf1.yaml  joint_names_walle.yaml
launch/: display.launch.py  line_following.launch.py  robot_state_publisher.launch.py  self_balancing.launch.py  walle.launch.py
meshes/: backleftspacers.STL  backrightspacers.STL  base_link.STL  chassis.STL  frontdir.STL  frontleftspacers.STL  frontrightspacers.STL  leftlink.STL  leftshaft.STL  leftwheel.STL  pcb.STL  rightlink.STL  rightshaft.STL  rightwheel.STL
models/: course.material  course2.material
src/: line_following.cpp  marck.cpp  ml.cpp  self_balancing.cpp  wall_e.cpp  walle.cpp
urdf/: walle.csv  walle.sdf  walle.urdf  walle2.sdf  walle4.sdf  wallh.csv
worlds/: sra2.world  white.world  yellow_line.world
